# PGI

lab1/: CMakeLists.txt  bitmap.h  main.c
lab2/: CMakeLists.txt  bitmap.h  main.c
lab3/: .gitignore  CMakeLists.txt  bitmap.h  main.c
lab4/: CMakeLists.txt  bitmap.h  main.c
